--- a/ProjectAssignment_1.Rmd
+++ b/ProjectAssignment_1.Rmd
@@ -33,26 +33,26 @@ str(activity)
 1. Total numbers of steps taken Each Day (Hist)
 ```{r} 
 byValue=list(Date = activity$date)
-aggregatedActivity1 <- aggregate(activity$steps, by=byValue, FUN=sum, na.rm=TRUE)
-names(aggregatedActivity1) <- c("Date", "Sum.Of.Steps")
-with(aggregatedActivity1, hist(Sum.Of.Steps, col=Date, xlab="Total Steps per Day", main="Total Steps"))
-test1 <- 
+SumOfSteps <- aggregate(activity$steps, by=byValue, FUN=sum, na.rm=TRUE)
+names(SumOfSteps) <- c("Date", "Sum.Of.Steps")
+with(SumOfSteps, hist(Sum.Of.Steps, col=Date, xlab="Total Steps per Day", main="Total Steps"))
+
 ```
 
 2. Mean total number of steps
 ```{r}
 byValue=list(Date = activity$date)
-aggregatedActivity2 <- aggregate(activity$steps, by=byValue, FUN=mean, na.rm=TRUE)
-names(aggregatedActivity2) <- c("Date", "Average.Of.Steps")
-with(aggregatedActivity2, plot(Date, Average.Of.Steps, ylab="Mean - Daily Total Steps", type="l", main="Average - Steps by Day"))
+meanOfSteps <- aggregate(activity$steps, by=byValue, FUN=mean, na.rm=TRUE)
+names(meanOfSteps) <- c("Date", "Average.Of.Steps")
+with(meanOfSteps, plot(Date, Average.Of.Steps, ylab="Mean - Daily Total Steps", type="l", main="Average - Steps by Day"))
 ```
 
 3. Median total number of steps
 ```{r}
 byValue=list(Date = activity$date)
-aggregatedActivity3 <- aggregate(activity$steps, by=byValue, FUN=median, na.rm=TRUE)
-names(aggregatedActivity3) <- c("Date", "Median.Of.Steps")
-with(aggregatedActivity3, plot(Date, Median.Of.Steps, type="l", ylab="Median - Daily Total Steps", 
+medianOfSteps <- aggregate(activity$steps, by=byValue, FUN=median, na.rm=TRUE)
+names(medianOfSteps) <- c("Date", "Median.Of.Steps")
+with(medianOfSteps, plot(Date, Median.Of.Steps, type="l", ylab="Median - Daily Total Steps", 
                                main="Median - Steps by Day"))
 ```
 It makes any sense the median = 0?
@@ -61,26 +61,55 @@ It makes any sense the median = 0?
 4. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 ```{r}
 byValue=list(TimeInterval = activity$interval)
-aggregatedActivity4 <- aggregate(activity$steps, by=byValue, FUN=mean, na.rm=TRUE)
-names(aggregatedActivity4) <- c("Interval", "Mean.Of.Steps")
-with(aggregatedActivity4, plot(Interval, Mean.Of.Steps, type="l", xlab="5 Min Interval", ylab="Average Steps", 
+stepsByInterval <- aggregate(activity$steps, by=byValue, FUN=mean, na.rm=TRUE)
+names(stepsByInterval) <- c("Interval", "Mean.Of.Steps")
+with(stepsByInterval, plot(Interval, Mean.Of.Steps, type="l", xlab="5 Min Interval", ylab="Average Steps", 
                                main="Average Steps by 5 Min Interval"))
 ```
 
 5. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r}
-aggregatedActivity4AsMatrix <- cbind(aggregatedActivity4$Mean.Of.Steps, aggregatedActivity4$Interval)
-colnames(aggregatedActivity4AsMatrix) <- c("Mean Of Steps", "5 min Interval")
-maxNumOfSteps <- max(aggregatedActivity4AsMatrix[,1])
-intervalOfMaxSteps <- aggregatedActivity4AsMatrix[(aggregatedActivity4AsMatrix[,1] == maxNumOfSteps),][2]
+t <- cbind(stepsByInterval$Mean.Of.Steps, stepsByInterval$Interval)
+colnames(t) <- c("Mean Of Steps", "5 min Interval")
+maxNumOfSteps <- max(t[,1])
+intervalOfMaxSteps <- t[(t[,1] == maxNumOfSteps),][2]
 print(intervalOfMaxSteps)
 ```
 
-## Inputing missing values
+## Imputing missing values
 6. Counting and Reporting the number of NA in the dataset
 ```{r}
 sum(is.na(activity$steps))
 ```
+and it represents in % of the sampling...
+```{r}
+mean(is.na(activity$steps))
+```
 
+7. The strategy for filling in missing values will be to use the mean of the day.
+In case of the mean == NaN, 0 will be used instead.
+Here you can find the mean of steps by day (only the first 20, for reference)
+```{r}
+head(meanOfSteps, n=35)
+```
 
+8. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+complDataset <- split(activity,factor(activity$date))
+numOfIntervals <- length(complDataset[[1]]$steps)
+numOfDays <- length(meanOfSteps$Average.Of.Steps)
+for (i in numOfDays) {
+    for( j in numOfIntervals) {
+        if (is.na(complDataset[[i]]$steps[j])) {
+            if (is.nan(meanOfSteps$Average.Of.Steps[i])) {
+                complDataset[[i]]$steps[j] <- 0
+            } else {
+                complDataset[[i]]$steps[j] <- meanOfSteps$Average.Of.Steps[i]
+            }
+            
+        }
+    }
+}
+
+```
 ## Are there differences in activity patterns between weekdays and weekends?
